--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><b>TURBOLY-APP</b></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <%
+=begin%>
+ <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    </button> 
+<%
+=end%>
+    <div class="collapse_ navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <% if current_user %>
             <li class="nav-item">
@@ -12,6 +16,12 @@
             </li>
             <li class="nav-item">
                 <%= link_to "Task", tasks_path, class: "nav-link #{request.fullpath == tasks_path ? 'active' : ''}" %>
+            </li>
+            <li class="nav-item">
+                <%= link_to(todays_path, class: "nav-link #{request.fullpath == todays_path ? 'active' : ''}") do %>
+                  Today
+                  <span class="badge badge-light <%= todays.length == 0 ? 'bg-secondary' : 'bg-danger' %>"><%= todays.length %></span>
+                <% end %>
             </li>
         <% end %>
       </ul>
