--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,13 +12,13 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <% if current_user %>
             <li class="nav-item">
-                <%= link_to "Home", root_path, class: "nav-link #{request.fullpath == root_path ? 'active' : ''}" %>
+                <%= link_to "Home", root_path, class: "nav-link #{request[:controller] == 'homes' ? 'active' : ''}" %>
             </li>
             <li class="nav-item">
-                <%= link_to "Task", tasks_path, class: "nav-link #{request.fullpath == tasks_path ? 'active' : ''}" %>
+                <%= link_to "Task", tasks_path, class: "nav-link #{request[:controller] == 'tasks' ? 'active' : ''}" %>
             </li>
             <li class="nav-item">
-                <%= link_to(todays_path, class: "nav-link #{request.fullpath == todays_path ? 'active' : ''}") do %>
+                <%= link_to(todays_path, class: "nav-link #{request[:controller] == 'todays' ? 'active' : ''}") do %>
                   Today
                   <span class="badge badge-light <%= todays.length == 0 ? 'bg-secondary' : 'bg-danger' %>"><%= todays.length %></span>
                 <% end %>
@@ -28,15 +28,18 @@
       <form class="d-flex" role="search">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <% if current_user %>
+                <li class="nav-item nav-link text-light">
+                  (<%= current_user.name %>)
+                </li>
                 <li class="nav-item">
-                    <%= link_to "Logout", logout_path, class: "nav-link #{request.fullpath == logout_path ? 'active' : ''}", data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
+                    <%= link_to "Logout", logout_path, class: "nav-link #{request[:controller] == 'sessions' ? 'active' : ''}", data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} %>
                 </li>
             <% else %>
                 <li class="nav-item">
-                    <%= link_to "Login", login_path, class: "nav-link #{request.fullpath == login_path ? 'active' : ''}" %>
+                    <%= link_to "Login", login_path, class: "nav-link #{request[:controller] == 'sessions' ? 'active' : ''}" %>
                 </li>
                 <li class="nav-item">
-                    <%= link_to "Signup", '/users/new', class: "nav-link #{request.fullpath == '/users/new' ? 'active' : ''}" %>
+                    <%= link_to "Signup", '/users/new', class: "nav-link #{request[:controller] == 'users' ? 'active' : ''}" %>
                 </li>
             <% end %>
         </ul>
